third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/basic-multiline-out-of-range-unicode-escape-1.stderr
TOML parse error at line 1, column 10
  |
1 | a = """\UFFFFFFFF"""
  |          ^
invalid unicode 8-digit hex code
value is out of range
